<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="ble_not_supported">BLE is not supported. Unable to use app.</string>
    <string name="label_data">Thermal Divider State:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">Connection Status:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="logo">Logo</string>
    <string name="refresh">Refresh</string>
    <string name="lunchbox">Lunchbox</string>
    <string name="overlay">Overlay</string>
    <string name="reconnect">Reconnect</string>
    <string name="_0">0</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="slogan">Temperature Controlled Transport</string>
    <string name="menu_alerts">Alerts</string>
    <string name="bluetooth_required">Bluetooth required for app</string>
    <string name="searching_text">Searching for Device...</string>
</resources>
