<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--android:background="@drawable/thermal_divider_background">-->

    <LinearLayout
        android:id="@+id/deviceControlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:text="@string/app_name"-->
            <!--android:textSize="40sp" />-->

        <ImageView
            android:src="@drawable/thermal_divider_200"
            android:maxHeight="40dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/lunchbox"
                android:src="@drawable/thermocool_luchbox_view" />

            <ImageView
                android:id="@+id/lunchbox_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/overlay"
                android:src="@drawable/thermocool_luchbox_overlay" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/cold_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/_0"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/hot_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/_0"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_huge"
            android:layout_marginRight="@dimen/margin_huge"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_state"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/connection_state"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disconnected"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_data"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/data_value"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inactive"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/activate"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/rounded"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activate" />

        </LinearLayout>

        <com.example.android.bluetoothlegatt.LineChartView
            android:id="@+id/lineChartView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:text="info text"
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>